--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -203,7 +203,7 @@ a {
   background: #3dc1db;
   box-shadow: inset 6px 6px 12px #329eb4, inset -6px -6px 12px #48e4ff;
   padding: 14px 70px;
-  margin: 75px 0;
+  margin: 60px 0 80px;
   &:hover {
   transform: scale(0.95);
   }
